--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.26.0
-numpy==1.24.4
-Pillow==10.0.1
-opencv-python==4.8.0.74
-tensorflow==2.14.0
-keras==2.14.0
+streamlit
+numpy
+Pillow
+opencv-python-headless
+tensorflow
+keras
